test/tests/compiler/1_int_constants/valid/return_2.plx
pub main(none) i32 {
    return 2
}
