test/tests/compiler/1_int_constants/invalid_parse/plx1_empty_block.plx
pub main(none) i32 {
}
